# RimModManager

./: .gitignore  .gitmodules  LICENSE  README.md  files_tree.txt  main.py  pack_gitignore_zip.py  pack_nuitka.py  pack_pyinstaller.py  pyproject.toml  validate_environment.py
backend/: _version.py  api.py  browser_runtime.py  settings.py  static_page.py  theme_store.py  window_state.py
backend/ai/: __init__.py  ai_definitions.py  ai_gateway.py  ai_service.py  ai_tools.py  assistant_runtime.py  def_entries.py  def_output_contracts.py  llm_gateway.py  prompts.py  service.py  tools.py
backend/database/: dao.py  dao_ext.py  migrator.py  models.py  models_ext.py  repair.py  runtime.py  workshop_selection.py
backend/i18n/: __init__.py  language_registry.py  translation.py
backend/load_order/: __init__.py  detector.py  import_check.py  language_pack_ownership.py  models.py  parsers.py  share_code.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: setup_steamworks_runtime.py
tests/: esm-js-loader.mjs  frontend_matrix_item_state.mjs  frontend_package_scope.mjs  test_ai_assistant_runtime.py  test_ai_attachment_resolver.py  test_ai_gateway_request_compat.py  test_ai_service_helpers.py  test_browser_runtime.py  test_bundle_managers.py  test_dlc_parser_cache_mode.py  test_download_manager.py  test_environment_runtime.py  test_file_manager.py  test_file_search.py  test_game_log_paths.py  test_github_manager.py  test_group_dao.py  test_import_check.py  test_language_pack_ownership.py  test_language_registry.py  test_load_order_manager_import_check.py  test_load_order_parsers.py  test_load_order_share_code.py  test_mac_platform_support.py  test_maintenance_manager.py  test_mod_asset_missing_state.py  test_mod_config_manager.py  test_mod_residue_manager.py  test_multiplayer_compat_manager.py  test_network_manager.py  test_profile_and_scanner.py  test_recommendation_export_manager.py  test_rule_manager_dynamic_weights.py  test_security_storage.py  test_shortcuts.py  test_sorter_strategies.py  test_startup_coordinator.py  test_steam_actions.py  test_texture_opt_api.py  test_texture_opt_batch_recovery.py  (+7 more)
(+360 files in other folders)
