[project]
name = "rimmodmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "icecream>=2.1.8",
    "lxml>=6.0.2",
    "nuitka>=2.8.10",
    "openai>=2.15.0",
    "peewee>=3.18.3",
    "pillow>=12.0.0",
    "pyinstaller>=6.18.0",
    "pywebview>=6.1",
    "requests>=2.32.5",
    "send2trash>=2.0.0",
    "steamworkspy>=0.0.2",
]
