[project]
name = "rimcrow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "certifi>=2026.1.4",
    "colorlog>=6.10.1",
    "icecream>=2.1.8",
    "json-repair>=0.58.0",
    "keyring>=25.7.0",
    "litellm>=1.81.14",
    "lxml>=6.0.2",
    "nuitka>=2.8.10",
    "openai>=2.15.0",
    "packaging>=25.0",
    "pathspec>=1.0.4",
    "peewee>=3.18.3",
    "pillow>=12.0.0",
    "pip-system-certs>=5.3",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pyinstaller>=6.18.0",
    "pytest>=9.0.3",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "pywebview>=6.1",
    "pywin32>=311; sys_platform == 'win32'",
    "reportlab>=4.5.1",
    "requests>=2.32.5",
    "send2trash>=2.0.0",
    "setuptools<70.0.0",
    "steam-vdf>=0.1.10",
    "zstandard>=0.25.0",
]
